Fixed bug where date would overlap with like and comment icons when a post's img was narrow.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -179,6 +179,11 @@ main {
     flex-grow: 1;
 }
 
+/* Prevents date from overlapping with heart and comment icon */
+.feed-post-container .post-date{
+    margin-left: 20px;
+}
+
 
 /* profil pic styling */
 
